Infra/k8s/events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-events-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app : connect-events-pod
  template:
    metadata:
      labels:
        app: connect-events-pod
    spec:
      containers:
        - name: connect-events-container
          image: srp254/connect-app-events-image
          imagePullPolicy: Never
---
apiVersion : v1
kind : Service
metadata: 
  name: connect-events-srv
spec:
  type: ClusterIP
  selector:
    app : connect-events-pod
  ports:
    - name: connect-events-port
      protocol: TCP
      port: 4006
      targetPort: 4006
